Nikola auto commit.
Source commit: ?Nikola version: 8.2.3

--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                 </p>
 </div>
             </header><div class="e-content entry-content">
-                    <script src="assets/js/file.js" id="58d37abe-38f7-4e05-b893-675403286140"></script>
+                    <p>sdfsdfsdf
+sfsfsdfsd</p>
+<script src="assets/js/file.js" id="58d37abe-38f7-4e05-b893-675403286140"></script>
 </div>
             </article>
 </div>
