--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </header><div class="e-content entry-content">
                     <p>sdfsdfsdf
 sfsfsdfsd</p>
-<script src="assets/js/file.js" id="58d37abe-38f7-4e05-b893-675403286140"></script>
+<script src="file.js" id="58d37abe-38f7-4e05-b893-675403286140"></script>
 </div>
             </article>
 </div>
